# rust_web_basic

./: Cargo.toml  README.md  build.rs  font_list.txt
src/: config.rs  error.rs  main.rs  server.rs
src/api/: mod.rs
src/utils/: mod.rs
