[package]
name = "rust_web_template"
version = "0.1.0"
edition = "2024"

[build-dependencies]
walkdir = "2.1"
ureq = "2.9"


[dependencies]
clap = "4"
config = "0.13.3"

# web server
actix-web = "4"
actix-files = "0.6.2"
actix-session = { version = "0.8", features = ["cookie-session"] }

# templates
tera = { version = "1.16.1", default-features = false}

# Json encoding
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

# logging
log = "0.4.17"
log4rs = { version = "1", features = ["rolling_file_appender"] }

# async
tokio = { version = "1", features = ["full"] }

# random number generation
rand = "0.8"

# Nice errors
anyhow = "1.0"
thiserror = "1"

# user directories
dirs = "5"
